# Noti-ScraperAPI

./: .gitignore  README.md  XatakaAPI.py  el_pais.json  el_pais.py  montevideo_portal.py  montevideo_portalAPI.py  new.py  news.json  newsXataka.json  pyproject.toml  util.py  xataka.json  xataka_api.py
src/noti_scraperapi/: __init__.py  el_pais.py  montevideo_portal.py  new.py  scrapers.py  util.py
src/noti_scraperapi/article_parsers/: base.py  el_pais.py  montevideo_portal.py  xataka.py
