[project]
name = "noti-scraperapi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "BruMaster7", email = "brunorocha1ero4@gmail.com" }
]
dependencies = [
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/noti_scraperapi"]

[project.scripts]
xataka = 'noti_scraperapi.scrapers:run_xataka_scraper'
montevideo_portal = 'noti_scraperapi.scrapers:run_montevideo_portal_scraper'
